@@ -7,6 +7,15 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
+	
+	<dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.28</version> <!-- Replace with the latest version -->
+        <scope>provided</scope>
+    </dependency>
+	
+	
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
@@ -173,6 +182,20 @@
                 </execution>
               </executions>
             </plugin>
+			
+			 <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.13.0</version>
+            <configuration>
+                <source>11</source> <!-- or your project's Java version -->
+                <target>11</target> <!-- or your project's Java version -->
+                <compilerArgs>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                </compilerArgs>
+            </configuration>
+        </plugin>
 		
 		
 
